@@ -22,7 +22,7 @@ h1 {
 <BODY>
 
 <a href="index.html">Homepage of RQDA</a>
-<h1><a href="#user manual">User's Manual</a></h1>
+<h1><a href="#manual">User's Manual</a></h1>
 <h1><a href="#tips">Tips<a></h1>
 <h1><a href="#faq">FAQ<a></h1>
 <hr>
