@@ -39,6 +39,7 @@ h1 {
 <li>Facilitator helps to categorize codes,which is key to theory building. I deliberately avoid using tree-like categorization
 <li>Facilitator helps to categorize files
 <li>Search files by keywords
+<li> Atrributes of file, which is useful for content analysis
 <li>There is a case category and related attributes of cases, which is crucial feature to bridge qualitative and quantitative research
 <li>Search information about selected case from the Internet vis popup menu
 <li>Temporary delete files and codes
@@ -70,7 +71,7 @@ h1 {
 <li>Launch RQDA by command <I>library(RQDA)</I> from within R. Then you can see the RQDA GUI.
 
 <h1>Documentation</h1>
-<A HREF="documentation.html#user manual" target="_blank">User Manual</A>
+<A HREF="documentation.html#manual" target="_blank">User Manual</A>
 <br><A HREF="documentation.html#tips" target="_blank">Tips</A>
 <br><A HREF="documentation.html#faq" target="_blank">FAQ</A>
 
@@ -87,7 +88,7 @@ h1 {
 <p>HUANG Ronggui (2008). RQDA: R-based Qualitative Data Analysis. R package version 0.1.6. http://rqda.r-forge.r-project.org/
 
 <h1>What's new in the latest version?</h1>
-<p>RQDA is now on <A href ="http://cran.r-project.org/web/packages/RQDA/index.html" target="_blank">CRAN</a>(2008-12-26).
+<p>RQDA 0.1-6 is now on <A href ="http://cran.r-project.org/web/packages/RQDA/index.html" target="_blank">CRAN</a> (2008-12-26).
 <p>RQDA has been actively developed. You can click <A HREF="ChangeLog.txt">here</A> to see the new features.
 
 <h1>More Informaiton</h1>
